[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SearchBar/SearchBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Recipes.gd" type="Script" id=3]
[ext_resource path="res://Scenes/NewRecipe.tscn" type="PackedScene" id=4]

[node name="Recipes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="Content"]
margin_right = 1600.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )

[node name="Left" type="HBoxContainer" parent="Content/Header"]
margin_right = 398.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Content/Header/Left"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
text = "Back"

[node name="NewRecipe" type="Button" parent="Content/Header/Left"]
margin_left = 104.0
margin_right = 284.0
margin_bottom = 48.0
rect_min_size = Vector2( 180, 0 )
text = "New Recipe +"

[node name="Center" type="HBoxContainer" parent="Content/Header"]
margin_left = 402.0
margin_right = 1198.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Content/Header/Center"]
margin_left = 152.0
margin_top = 17.0
margin_right = 189.0
margin_bottom = 31.0
text = "Filter:"

[node name="GF" type="CheckBox" parent="Content/Header/Center"]
margin_left = 205.0
margin_right = 308.0
margin_bottom = 48.0
text = "Gluten Free"

[node name="Keto" type="CheckBox" parent="Content/Header/Center"]
margin_left = 324.0
margin_right = 415.0
margin_bottom = 48.0
text = "Ketogenic"

[node name="Veg" type="CheckBox" parent="Content/Header/Center"]
margin_left = 431.0
margin_right = 526.0
margin_bottom = 48.0
text = "Vegetarian"

[node name="Pesc" type="CheckBox" parent="Content/Header/Center"]
margin_left = 542.0
margin_right = 643.0
margin_bottom = 48.0
text = "Pescatarian"

[node name="Right" type="HBoxContainer" parent="Content/Header"]
margin_left = 1202.0
margin_right = 1600.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="SearchBar" parent="Content/Header/Right" instance=ExtResource( 1 )]
margin_right = 398.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="ScrollBody" type="ScrollContainer" parent="Content"]
margin_top = 52.0
margin_right = 1600.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeContainer" type="GridContainer" parent="Content/ScrollBody"]
margin_right = 1600.0
margin_bottom = 748.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="New" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRecipe" parent="New" instance=ExtResource( 4 )]

[connection signal="pressed" from="Content/Header/Left/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Content/Header/Left/NewRecipe" to="." method="_on_NewRecipe_pressed"]
[connection signal="toggled" from="Content/Header/Center/GF" to="." method="_on_GF_toggled"]
[connection signal="toggled" from="Content/Header/Center/Keto" to="." method="_on_Keto_toggled"]
[connection signal="toggled" from="Content/Header/Center/Veg" to="." method="_on_Veg_toggled"]
[connection signal="toggled" from="Content/Header/Center/Pesc" to="." method="_on_Pesc_toggled"]
[connection signal="creation_canceled" from="New/NewRecipe" to="." method="_on_NewRecipe_creation_canceled"]
[connection signal="recipe_created" from="New/NewRecipe" to="." method="_on_NewRecipe_recipe_created"]
[connection signal="recipe_deleted" from="New/NewRecipe" to="." method="_on_NewRecipe_recipe_deleted"]
